fix(component-carousel): 🐛 mobile fix for alignment issue

--- a/packages/component-carousel/src/core/components/BaseCarousel/glide/glide.theme.scss
+++ b/packages/component-carousel/src/core/components/BaseCarousel/glide/glide.theme.scss
@@ -8,8 +8,10 @@ $uds-breakpoint-lg: 1200px;
 $uds-color-base-gray-7: #191919;
 $uds-color-brand-gold: #ffc627; // ASU Gold brand color
 
-.container .aligned-carousel {
-  margin-left: -104px !important;
+@media only screen and (min-width: 577px) {
+  .container .aligned-carousel {
+    margin-left: -104px !important;
+  }
 }
 
 .#{$glide-class} {
